feat: add RBAC admin role management, secure .env secrets, and remove Better Auth