@@ -1,67 +1,39 @@
 package com.codebangers.backend.user.controller;
 
-import com.codebangers.backend.config.JwtService;
-import com.codebangers.backend.config.exception.ResourceNotFoundException;
-import com.codebangers.backend.user.dto.AuthResponse;
-import com.codebangers.backend.user.dto.LoginRequest;
 import com.codebangers.backend.user.dto.UserRequest;
 import com.codebangers.backend.user.dto.UserResponse;
-import com.codebangers.backend.user.model.Role;
 import com.codebangers.backend.user.model.User;
 import com.codebangers.backend.user.service.UserService;
-import jakarta.validation.Valid;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.security.core.annotation.AuthenticationPrincipal;
-import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/users")
 public class UserController {
 
     private final UserService userService;
-    private final JwtService jwtService;
 
-    public UserController(UserService userService, JwtService jwtService) {
+    public UserController(UserService userService) {
         this.userService = userService;
-        this.jwtService = jwtService;
-    }
-
-    @PostMapping("/register")
-    public ResponseEntity<AuthResponse> register(@Valid @RequestBody UserRequest request) {
-        User user = new User(
-            request.getUserName(),
-            request.getFirstName(),
-            request.getLastName(),
-            request.getEmail(),
-            request.getPassword(),
-            Role.USER
-        );
-        User createdUser = userService.createUser(user);
-        return new ResponseEntity<>(mapToAuthResponse(createdUser, "User registered successfully"), HttpStatus.CREATED);
-    }
-
-    @PostMapping("/login")
-    public ResponseEntity<AuthResponse> login(@Valid @RequestBody LoginRequest request) {
-        User user = userService.authenticateUser(request.getEmail(), request.getPassword());
-        return ResponseEntity.ok(mapToAuthResponse(user, "Login successful"));
     }
 
     @GetMapping
     @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<List<UserResponse>> getAllUsers() {
-        List<UserResponse> responses = userService.getAllUsers().stream()
+        List<User> users = userService.getAllUsers();
+        List<UserResponse> responses = users.stream()
             .map(this::mapToResponse)
-            .toList();
+            .collect(Collectors.toList());
         return ResponseEntity.ok(responses);
     }
 
     @GetMapping("/{id}")
+    @PreAuthorize("hasRole('ADMIN') or #id.toString() == authentication.token.claims['userId']")
     public ResponseEntity<UserResponse> getUserById(@PathVariable UUID id) {
         return userService.getUserById(id)
             .map(user -> ResponseEntity.ok(mapToResponse(user)))
@@ -69,38 +41,43 @@ public class UserController {
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<UserResponse> updateUser(@PathVariable UUID id, @Valid @RequestBody UserRequest request) {
-        User user = userService.updateUser(id, request);
-        return ResponseEntity.ok(mapToResponse(user));
+    @PreAuthorize("hasRole('ADMIN') or #id.toString() == authentication.token.claims['userId']")
+    public ResponseEntity<?> updateUser(@PathVariable UUID id, @RequestBody UserRequest request) {
+        try {
+            User user = userService.updateUser(id, request);
+            return ResponseEntity.ok(mapToResponse(user));
+        } catch (IllegalArgumentException e) {
+            return ResponseEntity.badRequest().body(java.util.Map.of("message", e.getMessage()));
+        }
+    }
+
+    @RequestMapping(value = "/{id}/role", method = {RequestMethod.PATCH, RequestMethod.PUT})
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<?> updateUserRole(@PathVariable UUID id, @RequestBody(required = false) com.codebangers.backend.user.dto.RoleUpdateRequest request) {
+        if (request == null || request.getRole() == null) {
+            return ResponseEntity.badRequest().body(java.util.Map.of("message", "Le paramètre 'role' (STUDENT, TEACHER, ADMIN) est obligatoire."));
+        }
+
+        try {
+            User user = userService.updateUserRole(id, request.getRole());
+            return ResponseEntity.ok(mapToResponse(user));
+        } catch (com.codebangers.backend.config.exception.ResourceNotFoundException e) {
+            return ResponseEntity.status(org.springframework.http.HttpStatus.NOT_FOUND)
+                .body(java.util.Map.of("message", "Utilisateur non trouvé avec l'identifiant spécifié."));
+        } catch (Exception e) {
+            return ResponseEntity.badRequest().body(java.util.Map.of("message", "Erreur lors de la modification du rôle : " + e.getMessage()));
+        }
     }
 
     @DeleteMapping("/{id}")
     @PreAuthorize("hasRole('ADMIN')")
-    public ResponseEntity<Void> softDeleteUser(@PathVariable UUID id, @AuthenticationPrincipal Jwt jwt) {
-        User admin = resolveUser(jwt);
-        userService.softDeleteUser(id, admin);
-        return ResponseEntity.noContent().build();
-    }
-
-    @PutMapping("/{id}/block")
-    @PreAuthorize("hasRole('ADMIN')")
-    public ResponseEntity<Void> blockUser(@PathVariable UUID id, @AuthenticationPrincipal Jwt jwt) {
-        User admin = resolveUser(jwt);
-        userService.blockUser(id, admin);
-        return ResponseEntity.noContent().build();
-    }
-
-    @PutMapping("/{id}/unblock")
-    @PreAuthorize("hasRole('ADMIN')")
-    public ResponseEntity<Void> unblockUser(@PathVariable UUID id) {
-        userService.unblockUser(id);
-        return ResponseEntity.noContent().build();
-    }
-
-    private User resolveUser(Jwt jwt) {
-        String email = jwt.getSubject();
-        return userService.getUserByEmail(email)
-            .orElseThrow(() -> new ResourceNotFoundException("User", email));
+    public ResponseEntity<?> softDeleteUser(@PathVariable UUID id) {
+        try {
+            userService.softDeleteUser(id);
+            return ResponseEntity.noContent().build();
+        } catch (IllegalArgumentException e) {
+            return ResponseEntity.notFound().build();
+        }
     }
 
     private UserResponse mapToResponse(User user) {
@@ -114,16 +91,5 @@ public class UserController {
         response.setCreatedAt(user.getCreatedAt());
         response.setUpdatedAt(user.getUpdatedAt());
         return response;
-    }
-
-    private AuthResponse mapToAuthResponse(User user, String message) {
-        return new AuthResponse(
-            user.getId(),
-            user.getUserName(),
-            user.getEmail(),
-            user.getRole().toString(),
-            message,
-            jwtService.generateToken(user)
-        );
     }
 }
